调整安全生产详情页面手机号到可拨打状态

--- a/html/listDetails.html
+++ b/html/listDetails.html
@@ -22,9 +22,10 @@
 <script type="text/javascript">
 	$(document).ready(function() {
 		$.hori.setHeaderTitle("安全生产详情");
+		
 	});
 </script>
-<body>
+<body id="ibody">
 
 <div>
     <ul  data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
@@ -46,7 +47,5 @@
     </ul>
 </div>
 </body>
-
-
 </html>
 
