给新闻类页面加上自定义的loading

--- a/html/ipad.html
+++ b/html/ipad.html
@@ -9,6 +9,9 @@
 <link
 	href="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.css"
 	rel="stylesheet" />
+<link
+	href="../lib/jquery-mobile/loading.background.color.css"
+	rel="stylesheet" />
 <link href="../lib/jquery-mobile/jquery-mobile-fluid960.css"
 	rel="stylesheet" />
 <link href="../lib/app/home/css/home.css" rel="stylesheet" />
