使安全生产上的电话可拨打

--- a/html/aqscLeftPage.html
+++ b/html/aqscLeftPage.html
@@ -74,22 +74,22 @@
     	  <tr style="vertical-align:top;">
     	  <td>电话： </td>
     	  <td>郑东生</td>
-    	  <td>010 - 63349976</td>
+    	  <td><a href="tel:010 - 63349976">010 - 63349976</a></td>
     	  </tr>
     	  <tr>
     	  <td></td>
     	  <td>刘元才</td>
-    	  <td>010 - 63349557</td>
+    	  <td><a href="tel:010 - 63349557">010 - 63349557</a></td>
     	  </tr>
     	  <tr>
     	  <td></td>
     	  <td>杨文红</td>
-    	  <td>010 - 63349552</td>
+    	  <td><a href="tel:010 - 63349552">010 - 63349552</a></td>
     	  </tr>
     	  <tr>
     	  <td></td>
     	  <td>沈德继</td>
-    	  <td>010 - 63349562</td>
+    	  <td><a href="tel:010 - 63349562">010 - 63349562</a></td>
     	  </tr>
     	  
     	</table>
