将BI中的loading改为原生loading

--- a/html/bi/lrwc.html
+++ b/html/bi/lrwc.html
@@ -19,7 +19,7 @@ a {
 			data-bind="text: reportdata.month"></span>月。
 	</div>
 	<!-- 利润完成 -->
-	<div id="main"  style="height: 400px">
+	<div id="main"  style="height: 400px; padding-top: 50px; padding-bottom: 10px;">
 	</div>
 	</div>
 </body>
