查阅详情打不开、最右侧图片不显示

--- a/html/queryList.html
+++ b/html/queryList.html
@@ -372,7 +372,7 @@
 			localStorage.setItem("contemplate",templatecon);
 			var unid = $(str).data("unid");
 			localStorage.setItem("unid",unid);
-			var loadurl= $.hori.getconfig().serverBaseUrl+"/viewhome/html/neiqingform.html";
+			var loadurl= $.hori.getconfig().serverBaseUrl+"viewhome/html/neiqingform.html";
 			//alert(loadurl);return;
 			$.hori.loadPage(loadurl);
 		}
@@ -398,7 +398,7 @@
 			var unid = $(str).data("unid");
 			localStorage.setItem("unid",unid);
 			//alert(unid);return;
-			var loadurl= $.hori.getconfig().serverBaseUrl+"/viewhome/html/signform.html";
+			var loadurl= $.hori.getconfig().serverBaseUrl+"viewhome/html/signform.html";
 			$.hori.loadPage(loadurl);
 		}
 		
