在版本页面加上标题

--- a/html/xgbb.html
+++ b/html/xgbb.html
@@ -12,6 +12,7 @@
 </head>
 <script type="text/javascript">
 	$(document).ready(function() {
+		$.hori.setHeaderTitle("关于");
 		$.hori.getClientVersion(function(data) {
 			document.getElementById("banben").innerHTML = data;
 		});
