--- a/html/queryList.html
+++ b/html/queryList.html
@@ -512,7 +512,7 @@
 			}
 			if(value=="did"){
 				template="searchsignArchvied";
-				view="vwDocByArchvied";
+				view="vwDocByArchived";
 				localStorage.setItem("type","searchsignArchvied");
 			}
 			var singdbPath = localStorage.getItem("singdbPath");
