--- a/html/queryList.html
+++ b/html/queryList.html
@@ -23,9 +23,52 @@
 			var fstart=1;
 			var view="";
 			var dataid = ""
+			var ayeartime;
+			var formtime;
+			var taskListNum;
+			function fiteryear(){ //过滤年份显示
+				var taskListLiHideNum=0;
+			    var now = new Date();
+			    var year=now.getFullYear()-1;   
+			    var month=now.getMonth()+1;
+			    if(month<10){month="0"+month;}
+			    var date=now.getDate();
+			    if(date<10){date="0"+date;}
+			    var hour=now.getHours();   
+			    var minute=now.getMinutes();   
+			    var second=now.getSeconds();
+			    ayeartime=year+"-"+month+"-"+date+" "+hour+":"+minute+":"+second;
+			    $("li").each(function(){
+			        formtime = $(this).data("time");
+			        if(ayeartime>formtime){
+			            $(this).hide();
+						taskListLiHideNum=taskListLiHideNum+1;
+			        }else{
+			        }
+			    });
+				var querydataListHide = localStorage.getItem("querydataListHide");
+				taskListNum = taskListNum-1;
+				var nodataHtml='<li name="more" class="ui-li-static ui-body-inherit ui-first-child ui-last-child"><div style="width:100%;" align="center"><h3>无内容</h3></div></li>';
+				if(taskListNum==taskListLiHideNum){
+					//$("#"+querydataListHide).empty();
+					var divs = document.getElementsByName("more");
+					for(var i=0; i<divs.length; i++)
+					{
+						divs[i].style.display='none';
+					}
+					$("#"+querydataListHide).append(nodataHtml);
+					$("#moredata").hide();
+					localStorage.setItem("pullUpActionVal","no");
+				}
+			}
 			function pullUpAction () {
 				setTimeout(function () {
 					try{
+					var pullUpActionVal = localStorage.getItem("pullUpActionVal");
+					if(pullUpActionVal=="no"){
+						$.hori.loading("hide");
+						return false;
+					}
 					var type = localStorage.getItem("type");
 					var dbpath = "";
 					if(type=="searchqueryForDoing"){
@@ -62,7 +105,7 @@
 					}
 					if(type=="queryArchvied"){
 						template="Archvied";
-						view = "vwDocByArchived";
+						view = "vwDocByArchvied";
 						dataid = "querydataList";
 						dbpath="/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf";
 						Cstart=Cstart+5;
@@ -70,7 +113,7 @@
 					}
 					if(type=="searchqueryArchvied"){
 						template="searchqueryArchvied";
-						view = "vwDocByArchived";
+						view = "vwDocByArchvied";
 						dataid = "querydataList";
 						dbpath="/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf";
 						Cstart=Cstart+5;
@@ -145,6 +188,8 @@
 								}
 							}
 							$("#"+dataid).append(res).listview("refresh");
+							localStorage.setItem("pullUpActionVal","yes");
+							fiteryear();
 							myStartTaskLoad=true;
 							myScroll.refresh();
 							$.hori.hideLoading();
@@ -266,7 +311,7 @@
 			if(view=="vwDocByArchvied"){
 				localStorage.setItem("type","queryArchvied");
 				template="Archvied";
-				view="vwDocByArchived";
+				view="vwDocByArchvied";
 			}
 			$.hori.hideLoading();
 			var url=$.hori.getconfig().appServerHost+"view/oa/"+template+"/"+$.hori.getconfig().docServer+"/genertec/dep1/qsbg_1.nsf/myview?openform&view="+view+"&start=1&count=5";
@@ -281,6 +326,10 @@
 						loaded();
 						loded=loded+1;
 					}
+					taskListNum = $("#querydataList li").length;
+					localStorage.setItem("querydataListHide","querydataList");
+					localStorage.setItem("pullUpActionVal","yes");
+					fiteryear();
 					myScroll.refresh();
 					signLoad=true;
 					$.hori.hideLoading();
@@ -298,11 +347,7 @@
 				"type":"post",
 				"url":$.hori.getconfig().appServerHost+"/view/oa/signtype/"+$.hori.getconfig().docServer+"/genertec/mgrengine.nsf/createNavigator?openAgent&divIndex=001",
 				"success":function(res){
-					//alert(res);
-					//doctest/genertec/dep26/hqk_26.nsf
-					//用于测试写死，正式时要放开
-					//singdbPath = res; 
-					singdbPath="/"+$.hori.getconfig().docServer+"/genertec/dep26/hqk_26.nsf";
+					singdbPath = res.substring(0,res.indexOf("nsf"))+"nsf";
 					localStorage.setItem("singdbPath",singdbPath);
 					$.hori.hideLoading();
 				},
@@ -343,8 +388,11 @@
 					$("#signdataList").empty();
 					$("#querydataList").empty();
 					$("#signdataList").append(res).listview("refresh");
-					myScroll.refresh();
+					myScroll.refresh();taskListNum = $("#signdataList li").length;
+					localStorage.setItem("querydataListHide","signdataList");
+					localStorage.setItem("pullUpActionVal","yes");
 					$.hori.hideLoading();
+                    fiteryear();
 				},
 				"error":function(res){
 					alert(res);
@@ -433,6 +481,10 @@
 					$("#signdataList").empty();
 					$("#querydataList").append(res).listview("refresh");
 					$.hori.hideLoading();
+					taskListNum = $("#querydataList li").length;
+					localStorage.setItem("querydataListHide","querydataList");
+					localStorage.setItem("pullUpActionVal","yes");
+					fiteryear();
 					myScroll.refresh();
 					signLoad=true;
 					$.hori.hideLoading();
@@ -477,6 +529,10 @@
 					$("#signdataList").empty();
 					$("#querydataList").empty();
 					$("#signdataList").append(res).listview("refresh");
+					taskListNum = $("#signdataList li").length;
+					localStorage.setItem("querydataListHide","signdataList");
+					localStorage.setItem("pullUpActionVal","yes");
+					fiteryear();
 					$.hori.hideLoading();
 					myScroll.refresh();
 				},
