--- a/html/ipad.html
+++ b/html/ipad.html
@@ -51,7 +51,7 @@ text-indent:0em;
 						<div class="ui-btn-text left_module" style="text-align: center;margin-top: 0px;">
 							<p class="pdis"><a onclick="loadMiddleContent()" class="ui-link-inherit"><img
 								src="../assets/home/sy.png" class="icon" /></a></p>
-								 <p class="pdis" style="margin-bottom: 0px;"> <span class="wzs" >首页</span>
+								 <p class="pdis" style="margin-bottom: 0px;"> <span class="wzs" >新闻首页</span>
 						</div>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
@@ -141,7 +141,7 @@ text-indent:0em;
 			</div>
 		</div>
 		<div class="grid_5" id="middleContent" style="margin-left:1%;"></div>
-		<div class="" id="rightContent" style="display:inline;overflow: scroll;position:relative; margin-top:3%; position: fixed ;top: 7%;right:1.5em;">
+		<div id="rightContent" style="display:inline;overflow: scroll;position:relative; margin-top:2%; position: fixed ;top: 7%;right:1.5em;">
 			
 		</div>
 	</div>
