--- a/html/bi/srlrqs.html
+++ b/html/bi/srlrqs.html
@@ -18,9 +18,12 @@ a {
 			data-bind="text: reportdata.month"></span>月。
 	</div>
 	<!-- 收入利润趋势 -->
-	<div id="main" style="height: 400px">
+	<div id="main" >
 	</div>
-	<div id="main1" style="height: 400px">
+	<div id="main1">
+<!-- 	<div id="main" style="height: 260px">
+	</div>
+	<div id="main1" style="height: 260px"> -->
 	</div>
 	
 
