--- a/html/ipad.html
+++ b/html/ipad.html
@@ -105,6 +105,16 @@ text-indent:0em;
 								 <p class="pdis" style="margin-bottom: 0px;"><span class="wzs">电子期刊</span></p>
 						</div>
 					</div></li>
+				<li data-corners="false" data-shadow="false" data-iconshadow="true"
+					data-wrapperels="div" data-icon="arrow-r" data-iconpos="right"
+					data-theme="c" class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
+						class="ui-btn-inner ui-li">
+						<div class="ui-btn-text  left_module" style="text-align: center;">
+							<p style="margin-top: 0px;" class="pdis"><a href="#" onClick="loadXgbb()" class="ui-link-inherit"><img
+								src="../assets/home/ic_launcher.png" class="icon" /></a></p>
+								 <p class="pdis" style="margin-bottom: 0px;"><span class="wzs">关于</span></p>
+						</div>
+					</div></li>
 
 			</ul>
 		</div>
