--- a/html/bi/jyts.html
+++ b/html/bi/jyts.html
@@ -17,7 +17,7 @@ p {
 <body >
 	<!-- 经营态势 -->
 	<div style="height: 20px;margin-top:0px;"></div>
-		<div data-role="content" align="center" id="neirong" style="text-align: left;">
+		<div data-role="content" align="center" id="neirong" style="text-align: left;margin-left: 10px;margin-right: 10px;">
 		</div>
 </body>
 </html>
