--- a/html/bi/srlr.html
+++ b/html/bi/srlr.html
@@ -15,13 +15,13 @@ a {
 </head>
 <body>
 <div id='month' style="float: right; display: none;">
-		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
-			data-bind="text: reportdata.month"></span>月。
+		<p>注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
+			data-bind="text: reportdata.month"></span>月。</p>
 	</div>
 	<!-- 收入利润 -->
-	<div id="main" style="height: 260px; width: 450px; float: left;">
+	<div id="main" style="float: left;">
 	</div>
-	<div id="main1" style="height: 260px; width: 450px; float: left;">
+	<div id="main1" style="height: 200px; width: 450px; float: left;">
 	</div>
 </body>
 </html>
