--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -86,8 +86,9 @@ a {
 </head>
 <body>
 	<div id='month' style="float: right; display: none;">
+	   <p>
 		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
-			data-bind="text: reportdata.month"></span>月。
+			data-bind="text: reportdata.month"></span>月。</p>
 	</div>
 	<!-- 风险状况 -->
 	<div id="xianshi"></div>
