--- a/html/bi/srlrqs.html
+++ b/html/bi/srlrqs.html
@@ -14,16 +14,15 @@ a {
 </head>
 <body>
 	<div id='month' style="float: right; display: none;">
+	<p>
 		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
-			data-bind="text: reportdata.month"></span>月。
+			data-bind="text: reportdata.month"></span>月。</p>
 	</div>
+	
 	<!-- 收入利润趋势 -->
-	<div id="main" >
+	<div id="main" style="height: 200px; width: 450px; float: left;" >
 	</div>
-	<div id="main1">
-<!-- 	<div id="main" style="height: 260px">
-	</div>
-	<div id="main1" style="height: 260px"> -->
+	<div id="main1"  style="height: 200px; width: 450px; float: left;">
 	</div>
 	
 
