--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -15,8 +15,9 @@ a {
 </head>
 <body>
 <div id='month' style="float: right; display: none;">
+        <p>
 		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
-			data-bind="text: reportdata.month"></span>月。
+			data-bind="text: reportdata.month"></span>月。</p>
 	</div>
 	<!-- 收入完成 -->
 	<div id="main"
