* 进入关于时隐藏loading显示

--- a/html/xgbb.html
+++ b/html/xgbb.html
@@ -17,6 +17,7 @@
 		$.hori.setHeaderTitle("关于");
 		$.hori.getClientVersion(function(data) {
 			document.getElementById("banben").innerHTML = data;
+			$.hori.hideLoading();
 		});
 
 	});
