调整使风险状况的风墙充满页面

--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="format-detection" content="telephone=no" />
 <head>
 <title>风险状况</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -22,8 +23,8 @@ a {
 
 #xianshi {
 	padding: 0px;
-	margin-left: 10%;
 	float: left;
+	width: 95%;
 }
 
 .top_year {
