页面格式修改

--- a/html/officialDocument.html
+++ b/html/officialDocument.html
@@ -221,17 +221,16 @@
 </head>
 <body>
 	<div data-role="page" style="margin:0px;padding:0px;">
-		<div data-role="content">
+		<div data-role="content" style="padding-bottom:0px;">
 			<div data-role="tabs" id="tabs">
-		      	<div data-role="navbar">
+		      	<div data-role="navbar" style="margin-bottom: 0px; padding: 0px;" >
 					<ul>
 						<li><a href="#two" data-ajax="false" data-id="issuedocList">发文</a></li>
 						<li><a href="#three" data-ajax="false" data-id="receivedocList">收文</a></li>
 					</ul>
 				</div>
-				<div id="wrapper">
+				<div id="wrapper" style="margin-top:0px;">
 					<div id="scroller">
-					  <div id="pullDown"></div>
 					  <div id="two">
 							<ul id="issuedocDataList"  data-role="listview" data-inset="true">
 								<li id="moredata" style="display:none"><div id="pullUp" align="center">
