--- a/html/listDetailsForAQSC.html
+++ b/html/listDetailsForAQSC.html
@@ -72,7 +72,7 @@
 
 	<div id="notice" data-role="page" data-url="notice" tabindex="0"
 		class="ui-page ui-body-c ui-page-active"
-		style="height: 100%; margin: 5px;">
+		style="height: 100%; margin: 5px;overflow: scroll;">
 		<div data-role="content" align="center" class="ui-content" role="main">
 			<div data-role="content" class="ui-content" role="main" id='divO'
 				style='font-weight: bold;'>
