--- a/html/listDetailsForAQSC.html
+++ b/html/listDetailsForAQSC.html
@@ -72,10 +72,10 @@
 
 	<div id="notice" data-role="page" data-url="notice" tabindex="0"
 		class="ui-page ui-body-c ui-page-active"
-		style="height: 100%; margin: 5px;overflow: scroll;">
+		style="height: 100%; margin: 5px;overflow: hidden;">
 		<div data-role="content" align="center" class="ui-content" role="main">
 			<div data-role="content" class="ui-content" role="main" id='divO'
-				style='font-weight: bold;'>
+				style='font-weight: bold;overflow: scroll;height: 90%;'>
 				<h3>节日（重大活动）期间安全生产及值班安排表</h3>
 				<ul data-role="listview" data-inset="true" data-theme="d"
 					id="ul_dtable_list"
