修改新闻详情页面带有表情图片宽度的问题

--- a/html/ipad.html
+++ b/html/ipad.html
@@ -151,7 +151,7 @@ text-indent:0em;
 			</div>
 		</div>
 		<div class="grid_5" id="middleContent" style="margin-left:1%;"></div>
-		<div id="rightContent" style="display:inline;overflow: scroll;position:relative; margin-top:2%; position: fixed ;top: 7%;right:1.5em;">
+		<div id="rightContent" style="display:inline;overflow: scroll;position:relative; margin-top:5px; position: fixed ;top: 7%;right:1.5em;">
 			
 		</div>
 	</div>
