--- a/html/attachmentShowForm.html
+++ b/html/attachmentShowForm.html
@@ -1,15 +1,11 @@
-
+<!DOCTYPE html>
 <html>
 <head>
 	<title>申请单</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=1.0" />
 	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" /> 
-
 	<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" /> 
-
-	
 	<script src="../lib/jquery/jquery.min.js"></script>		
 	<script src="../lib/encrypt/encrypt.js"></script>
 	<script src="../lib/json/json2.js"></script>
